--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Project from "../components/project.astro";
         class="flex min-h-screen flex-col items-center justify-center bg-[#e8e8e8] bg-cover bg-fixed bg-center text-black dark:bg-black dark:text-white"
     >
         <div
-            class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-1 border-gray-700 p-4 shadow-xl backdrop-blur-lg"
+            class="relative m-6 max-w-2xl overflow-hidden rounded-xl border-1 border-gray-700 p-4 shadow-xl"
         >
             <h1 class="text-2xl font-bold">
                 <span class="hidden sm:inline">#</span>
